# azure-rbac

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ai-foundry-setup.md  ai-models.md  architecture.md  container-apps-plan.md  deployment-options.md
src/azure_rbac/: __init__.py  ai_advisor.py  azure_client.py  cli.py  graph_builder.py  security_analyzer.py
src/azure_rbac/dashboard/: __init__.py  app.py
src/azure_rbac/dashboard/static/: graph.js
src/azure_rbac/dashboard/templates/: index.html
terraform/: acr.tf  container-apps.tf  identity.tf  keyvault.tf  log-analytics.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
tests/: test_azure_client.py  test_graph_builder.py  test_security_analyzer.py
